# aiokilogram

./: .gitignore  Makefile  README.md  mypy.ini  setup.cfg
boilerplate/: button.py  errors.py  simple.py
src/aiokilogram/: action.py  bot.py  data.py  dispatcher.py  errors.py  handler.py  messenger.py  page.py  registration.py  settings.py
tests/: test_action.py
