[metadata]
name = aiokilogram
version = 0.0.11
author = Grigory Statsenko
author_email = grisha100@gmail.com
description = Convenience tools and wrappers for aiogram
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    telegram
    aiogram
url = https://github.com/altvod/aiokilogram
project_urls =
    Bug Tracker = https://github.com/altvod/aiokilogram/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    aiogram
    attrs
    emoji

[options.packages.find]
where = src

[options.extras_require]
testing =
    mypy
    pytest
build =
    build
    twine
